[gd_scene load_steps=15 format=3 uid="uid://du0hqdchr074i"]

[ext_resource type="Script" path="res://scenes/items/life_energy/life_energy.gd" id="1_07o00"]
[ext_resource type="Texture2D" uid="uid://bmb7sqeuqmqo6" path="res://assets/sprites/items/health_energy.png" id="1_o4v47"]
[ext_resource type="PackedScene" uid="uid://cwsfq108224f4" path="res://scenes/components/pickable_component/pickable_component.tscn" id="3_iq8f7"]
[ext_resource type="AudioStream" uid="uid://u3j8jegm05j" path="res://assets/audios/heal/sci-fi_power_up_01.wav" id="4_nlmt7"]
[ext_resource type="PackedScene" uid="uid://ck7kxf20vxak4" path="res://scenes/components/time_disappear_component/time_disappear_component.tscn" id="5_kkjud"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txntm"]
size = Vector2(10, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yay5"]
size = Vector2(10, 6)

[sub_resource type="Animation" id="Animation_4lyip"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PickableComponent/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:material")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_uhcp5"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 1, 0, 1]
}

[sub_resource type="Animation" id="Animation_f34c6"]
resource_name = "picked"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.353554, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PickableComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:material")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u6bmt"]
_data = {
"RESET": SubResource("Animation_4lyip"),
"idle": SubResource("Animation_uhcp5"),
"picked": SubResource("Animation_f34c6")
}

[sub_resource type="Curve" id="Curve_45qm0"]
_data = [Vector2(0, 0.536364), 0.0, 0.0, 0, 0, Vector2(0.184549, 1), 0.0, 0.0, 0, 0, Vector2(0.527897, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_2qnhx"]
curve = SubResource("Curve_45qm0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t5qpv"]
emission_shape = 3
emission_box_extents = Vector3(6, 1, 1)
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_2qnhx")
color = Color(1, 1, 0.443137, 0.478431)

[node name="LifeEnergy" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 129
script = ExtResource("1_07o00")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_txntm")

[node name="PickableComponent" parent="." instance=ExtResource("3_iq8f7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickableComponent"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_5yay5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("1_o4v47")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_u6bmt")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nlmt7")
volume_db = -16.197
pitch_scale = 1.2
bus = &"SE"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_t5qpv")
lifetime = 0.3
one_shot = true
explosiveness = 0.8

[node name="TimeDisappearComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("5_kkjud")]
sprite = NodePath("../Sprite2D")

[connection signal="picked" from="PickableComponent" to="." method="_on_pickable_component_picked"]
[connection signal="timeout" from="TimeDisappearComponent" to="." method="_on_time_disappear_component_timeout"]
